add scroll animation to index

--- a/.gitignore
+++ b/.gitignore
@@ -731,3 +731,5 @@ library/bootstrap-5/js/bootstrap.js
 library/bootstrap-5/js/bootstrap.js.map
 library/bootstrap-5/js/bootstrap.min.js
 library/bootstrap-5/js/bootstrap.min.js.map
+library/wow/WOW
+library/wow/WOW
